# static-site-gen

./: CHANGELOG.md  Dockerfile  README.md  example.md  static-site-gen.cabal
.github/workflows/: docker-cabal.yml
app/: Main.hs
src/: Convert.hs  Html.hs  Markup.hs
test/: Spec.hs  Tests.hs
