cabal-version:      2.4
name:               static-site-gen
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             noel-gallagher
maintainer:         noelgallagher164@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Html

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable static-site-gen
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        static-site-gen

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite static-site-gen-test
	type: exitcode-stdio-1.0
	main-is: Spec.hs
	hs-source-dir: test
	build-depends:
		base ^>=4.16.4.0,
		QuickCheck >= 2.14,
		hspec,
		static-site-gen
	ghc-options: -Wall
	default-language: Haskell2010

