cabal-version:      2.4
name:               static-site-gen
version:            0.1.0.0

author:             noel-gallagher
maintainer:         noelgallagher164@gmail.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Html,
		      Markup,
		      Convert
    build-depends:    base >=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable static-site-gen
    main-is:          Main.hs
    build-depends:
        base >=4.14.3.0,
        directory >= 1.3.7.1,
        static-site-gen

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite static-site-gen-test
	type: exitcode-stdio-1.0
	main-is: Spec.hs
	hs-source-dir: test
	build-depends:
        base >=4.14.3.0,
        directory >= 1.3.7.1,
		QuickCheck >= 2.14,
		hspec,
		static-site-gen
	ghc-options: -Wall
	default-language: Haskell2010

